# spyrk

./: .gitignore  README.md  codecheck  install  mypy.ini  pyproject.toml  requirements.txt  stop
docs/source/: conf.py  index.rst
tests/: test_add.py
